added delete button

--- a/src/comp/file/file.css
+++ b/src/comp/file/file.css
@@ -8,3 +8,10 @@
     display: inline-block;
     background: black;
 }
+.entery {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+}
