--- a/src/comp/playlist/playlist.css
+++ b/src/comp/playlist/playlist.css
@@ -16,9 +16,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    max-width: 600px;
+    margin: 8px auto;
 }
 .bar {
-    padding: 3px 6px;
+    margin: 3px 6px;
+    background: black;
 }
 .bar > * {
     height: 2px;
